--- a/pages/pedidos.html
+++ b/pages/pedidos.html
@@ -6,13 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../img/Favicon.png">
     <link rel="stylesheet" href="../css/style.css">
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <title>Pedidos</title>
 </head>
 <body class="grid">
 <!-- navigation bar -->
 <header class="header">
     <div>
-        <a href="./index.html">
+        <a href="../index.html">
             <img class="logo" src="../img/Logo-1.png" alt="logo">
         </a>
     </div>
@@ -20,15 +22,15 @@
         <nav class="textoNav">
             <ul>
                 <li class="listaNav">
-                    <a href="./productos.html">productos</a>
+                    <a href="./productos.html" class="link-dark">productos</a>
                 </li>
                 <li class="listaNav">
-                    <a href="./pedidos.html">pedidos</a></li>
+                    <a href="./pedidos.html" class="link-dark">pedidos</a></li>
                 <li class="listaNav">
-                    <a href="./nosotros.html">nosotros</a>
+                    <a href="./nosotros.html" class="link-dark">nosotros</a>
                 </li>
                 <li class="listaNav">
-                    <a href="./contacto.html">contacto</a>
+                    <a href="./contacto.html" class="link-dark">contacto</a>
                 </li>
             </ul>
         </nav>
@@ -79,12 +81,12 @@
     <div class="contenedoresFooterProductos">
         <ul>
             <li class="textoFooter">
-                <a href="./productos.html">productos</a>
+                <a href="./productos.html" class="link-dark">productos</a>
             </li>
             <li class="textoFooter">
-                <a href="./pedidos.html">pedidos</a></li>
+                <a href="./pedidos.html" class="link-dark">pedidos</a></li>
             <li class="textoFooter">
-                <a href="./nosotros.html">nosotros</a>
+                <a href="./nosotros.html" class="link-dark">nosotros</a>
             </li>
         </ul>
     </div>
@@ -92,10 +94,10 @@
         <h4 class="textoFooter__titulo">Contacto</h4>
         <ul>
             <li class="textoFooter">
-                <a href="https://walink.co/a67b8a">+5493415046876</a>
+                <a href="https://walink.co/a67b8a" class="link-dark">+5493415046876</a>
             </li>
             <li class="textoFooter">
-                <a href="mailto:clementinaracciatti@gmail.com">ciatti@pasteleria.com.ar</a>
+                <a href="mailto:clementinaracciatti@gmail.com" class="link-dark">ciatti@pasteleria.com.ar</a>
             </li>
         </ul>
     </div>
@@ -109,5 +111,7 @@
     </div>
 </footer>
 <!-- end footer -->
+<!-- JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </body>
 </html>
