--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="./img/Favicon.png">
-    <link rel="stylesheet" href="./css/style.css">
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Ciatti Pasteleria</title>
 </head>
 <body class="grid">
@@ -19,21 +19,29 @@
             </a>
         </div>
         <div>
-            <nav class="textoNav">
-                <ul>
-                    <li class="listaNav">
-                        <a href="./pages/productos.html" class="link-dark">productos</a>
-                    </li>
-                    <li class="listaNav">
-                        <a href="./pages/pedidos.html" class="link-dark">pedidos</a></li>
-                    <li class="listaNav">
-                        <a href="./pages/nosotros.html" class="link-dark">nosotros</a>
-                    </li>
-                    <li class="listaNav">
-                        <a href="./pages/contacto.html" class="link-dark">contacto</a>
-                    </li>
-                </ul>
-            </nav>
+            <nav class="navbar navbar-expand-lg textoNav">
+                <div class="container-fluid">
+                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                  </button>
+                  <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                      <li class="nav-item">
+                        <a class="nav-link" href="./pages/productos.html">productos</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="./pages/pedidos.html">pedidos</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="./pages/nosotros.html">nosotros</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="./pages/contacto.html">contacto</a>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+              </nav>
         </div>
     </header>
 <!-- end navigation bar -->
@@ -42,22 +50,22 @@
             <div class="carousel-inner">
               <div class="carousel-item active">
                 <img src="./img/imgrotador-1.jpg" class="d-block w-100" alt="Galletitas Unicornio">
-                <div class="carousel-caption d-none d-md-block">
-                    <h5 class="tituloIndex">Galletitas Decoradas</h5>
-                  </div>
+                <div class="carousel-caption d-block">
+                    <h5 class="tituloIndex">Galletitas</h5>
+                </div>
                </div>
-              <div class="carousel-item">
+               <div class="carousel-item">
                 <img src="./img/imgrotador-3.jpg" class="d-block w-100" alt="Macarrons">
-                <div class="carousel-caption d-none d-md-block">
+                <div class="carousel-caption d-block">
                     <h5 class="tituloIndex">Macarons</h5>
                 </div>
-              </div>
-              <div class="carousel-item">
+               </div>
+               <div class="carousel-item">
                 <img src="./img/imgrotador-4.jpg" class="d-block w-100" alt="Torta Roja">
-                <div class="carousel-caption d-none d-md-block">
+                <div class="carousel-caption d-block">
                     <h5 class="tituloIndex">Tortas</h5>
                 </div>
-              </div>
+               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
               <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -116,12 +124,12 @@
         <div>
             <ul>
                 <li class="textoFooter">
-                    <a href="./pages/productos.html" class="link-dark">productos</a>
+                    <a href="./pages/productos.html" >productos</a>
                 </li>
                 <li class="textoFooter">
-                    <a href="./pages/pedidos.html" class="link-dark">pedidos</a></li>
+                    <a href="./pages/pedidos.html" >pedidos</a></li>
                 <li class="textoFooter">
-                    <a href="./pages/nosotros.html" class="link-dark">nosotros</a>
+                    <a href="./pages/nosotros.html" >nosotros</a>
                 </li>
             </ul>
         </div>
@@ -129,10 +137,10 @@
             <h4 class="textoFooter__titulo">Contacto</h4>
             <ul>
                 <li class="textoFooter">
-                    <a href="https://walink.co/a67b8a" class="link-dark">+5493415046876</a>
+                    <a href="https://walink.co/a67b8a" >+5493415046876</a>
                 </li>
                 <li class="textoFooter">
-                    <a href="mailto:clementinaracciatti@gmail.com" class="link-dark">ciatti@pasteleria.com.ar</a>
+                    <a href="mailto:clementinaracciatti@gmail.com" >ciatti@pasteleria.com.ar</a>
                 </li>
             </ul>
         </div>
