--- a/pages/pedidos.html
+++ b/pages/pedidos.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../img/Favicon.png">
-    <link rel="stylesheet" href="../css/style.css">
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <link rel="stylesheet" href="../css/style.css">
     <title>Pedidos</title>
 </head>
 <body class="grid">
@@ -19,21 +19,29 @@
         </a>
     </div>
     <div>
-        <nav class="textoNav">
-            <ul>
-                <li class="listaNav">
-                    <a href="./productos.html" class="link-dark">productos</a>
-                </li>
-                <li class="listaNav">
-                    <a href="./pedidos.html" class="link-dark">pedidos</a></li>
-                <li class="listaNav">
-                    <a href="./nosotros.html" class="link-dark">nosotros</a>
-                </li>
-                <li class="listaNav">
-                    <a href="./contacto.html" class="link-dark">contacto</a>
-                </li>
-            </ul>
-        </nav>
+        <nav class="navbar navbar-expand-lg textoNav">
+            <div class="container-fluid">
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link" href="../pages/productos.html">productos</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link active" href="../pages/pedidos.html">pedidos</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="../pages/nosotros.html">nosotros</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="../pages/contacto.html">contacto</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
     </div>
 </header>
 <!-- end navigation bar -->
@@ -81,12 +89,12 @@
     <div class="contenedoresFooterProductos">
         <ul>
             <li class="textoFooter">
-                <a href="./productos.html" class="link-dark">productos</a>
+                <a href="./productos.html" >productos</a>
             </li>
             <li class="textoFooter">
-                <a href="./pedidos.html" class="link-dark">pedidos</a></li>
+                <a href="./pedidos.html" >pedidos</a></li>
             <li class="textoFooter">
-                <a href="./nosotros.html" class="link-dark">nosotros</a>
+                <a href="./nosotros.html" >nosotros</a>
             </li>
         </ul>
     </div>
@@ -94,10 +102,10 @@
         <h4 class="textoFooter__titulo">Contacto</h4>
         <ul>
             <li class="textoFooter">
-                <a href="https://walink.co/a67b8a" class="link-dark">+5493415046876</a>
+                <a href="https://walink.co/a67b8a" >+5493415046876</a>
             </li>
             <li class="textoFooter">
-                <a href="mailto:clementinaracciatti@gmail.com" class="link-dark">ciatti@pasteleria.com.ar</a>
+                <a href="mailto:clementinaracciatti@gmail.com" >ciatti@pasteleria.com.ar</a>
             </li>
         </ul>
     </div>
