full responsive + sass

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -20,7 +20,7 @@
         </a>
     </div>
     <div>
-        <nav class="navbar navbar-expand-lg textoNav">
+        <nav class="navbar navbar-expand-lg navTexto">
             <div class="container-fluid">
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -47,21 +47,21 @@
 </header>
 <!-- end navigation bar -->
     <main>
-        <div class="fondoRotadorInterno">
-            <h2 class="tituloIndex">Contacto</h2> 
+        <div class="rotadorInterno__Fondo">
+            <h2 class="contactoTitulo">Contacto</h2> 
         </div>
-        <div class="seccionesContacto">
+        <div class="contactoSecciones">
             <div>
-                <p class="textoTituloCentrado">¿Te quedó alguna duda?</p>
+                <p class="texto__TituloCentrado">¿Te quedó alguna duda?</p>
             </div>
-            <div class="seccionesContactoCard">
+            <div class="contactoCard">
                 <section>
                     <form>
-                        <label class="textoDescripcion" for="nombre_apellido">Nombre y apellido:</label> <br>
+                        <label class="texto__Descripcion" for="nombre_apellido">Nombre y apellido:</label> <br>
                         <input type="text" class="form-control" id="formGroupExampleInput" placeholder=""> <br>
-                        <label class="textoDescripcion" for="telefono">Teléfono:</label> <br>	
+                        <label class="texto__Descripcion" for="telefono">Teléfono:</label> <br>	
                         <input type="text" class="form-control" id="formGroupExampleInput" placeholder=""> <br>
-                        <label class="textoDescripcion"  for="consulta">Dejanos tu consulta</label> <br>	
+                        <label class="texto__Descripcion"  for="consulta">Dejanos tu consulta</label> <br>	
                         <textarea class="form-control" aria-label="With textarea"></textarea> <br>
                         <input class="button" type="submit" value="Enviar">
                     </form>
@@ -70,31 +70,31 @@
         </div>
     </main>
 <!-- footer -->
-<footer class="todoFooter">
-    <div class="contenedoresFooterLogo">
+<footer class="footerTodo">
+    <div>
         <a href="../index.html">
             <img class="logo" src="../img/Logo-1.png" alt="logo">
         </a> 
     </div>
     <div>
         <ul>
-            <li class="textoFooter">
+            <li class="footerTexto">
                 <a href="./productos.html">productos</a>
             </li>
-            <li class="textoFooter">
+            <li class="footerTexto">
                 <a href="./pedidos.html" >pedidos</a></li>
-            <li class="textoFooter">
+            <li class="footerTexto">
                 <a href="./nosotros.html" >nosotros</a>
             </li>
         </ul>
     </div>
     <div>
-        <h4 class="textoFooter__titulo">Contacto</h4>
+        <h4 class="footerTexto__Titulo">Contacto</h4>
         <ul>
-            <li class="textoFooter">
+            <li class="footerTexto">
                 <a href="https://walink.co/a67b8a" >+5493415046876</a>
             </li>
-            <li class="textoFooter">
+            <li class="footerTexto">
                 <a href="mailto:clementinaracciatti@gmail.com" >ciatti@pasteleria.com.ar</a>
             </li>
         </ul>
