--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -20,7 +20,7 @@
         </a>
     </div>
     <div>
-        <nav class="navbar navbar-expand-lg textoNav">
+        <nav class="navbar navbar-expand-lg navTexto">
             <div class="container-fluid">
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -47,50 +47,50 @@
 </header>
 <!-- end navigation bar -->
     <main>
-        <div class="fondoRotadorInterno">
-                <h2 class="tituloIndex">Nosotros</h2> 
+        <div class="rotadorInterno__Fondo">
+                <h2 class="nosotrosTitulo">Nosotros</h2> 
         </div>
-        <div class="seccionesNosotros">
+        <div class="nosotrosSecciones">
             <div>
-                <h2 class="textoTitulo">Un poco sobre nostors</h2>
-                <p class="textoDescripcion">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Delectus consequatur exercitationem sapiente nam, laboriosam tenetur. Sed ratione temporibus maiores, similique voluptatem incidunt ad tempore dolor laudantium amet. Illum, cumque voluptatum.</p>
+                <h2 class="textoNosotros__Titulo">Un poco sobre nostors</h2>
+                <p class="textoNosotros__Descripcion">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Delectus consequatur exercitationem sapiente nam, laboriosam tenetur. Sed ratione temporibus maiores, similique voluptatem incidunt ad tempore dolor laudantium amet. Illum, cumque voluptatum.</p>
             </div>
-            <div>
-                <img class="imgPastelera" src="../img/pastelera.jpeg" alt="pastelera">
+            <div class="pasteleraContenedor">
+                <img class="pasteleraImg" src="../img/pastelera.jpeg" alt="pastelera">
             </div>
         </div>
     </main>
 <!-- footer -->
-<footer class="todoFooter">
+<footer class="footerTodo">
     <div class="contenedoresFooterLogo">
         <a href="../index.html">
             <img class="logo" src="../img/Logo-1.png" alt="logo">
         </a> 
     </div>
-    <div class="contenedoresFooterProductos">
+    <div>
         <ul>
-            <li class="textoFooter">
+            <li class="footerTexto">
                 <a href="./productos.html" >productos</a>
             </li>
-            <li class="textoFooter">
+            <li class="footerTexto">
                 <a href="./pedidos.html" >pedidos</a></li>
-            <li class="textoFooter">
+            <li class="footerTexto">
                 <a href="./nosotros.html" >nosotros</a>
             </li>
         </ul>
     </div>
-    <div class="contenedoresFooterContacto">
-        <h4 class="textoFooter__titulo">Contacto</h4>
+    <div>
+        <h4 class="footerTexto__Titulo">Contacto</h4>
         <ul>
-            <li class="textoFooter">
+            <li class="footerTexto">
                 <a href="https://walink.co/a67b8a" >+5493415046876</a>
             </li>
-            <li class="textoFooter">
+            <li class="footerTexto">
                 <a href="mailto:clementinaracciatti@gmail.com" >ciatti@pasteleria.com.ar</a>
             </li>
         </ul>
     </div>
-    <div class="contenedoresFooterRedes">
+    <div>
         <a href="https://www.instagram.com/ciatti.pasteleria/">
             <img src="../img/icon-i.png" alt="icono instagram">
         </a> 
