--- a/pages/pedidos.html
+++ b/pages/pedidos.html
@@ -20,7 +20,7 @@
         </a>
     </div>
     <div>
-        <nav class="navbar navbar-expand-lg textoNav">
+        <nav class="navbar navbar-expand-lg navTexto">
             <div class="container-fluid">
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -47,19 +47,19 @@
 </header>
 <!-- end navigation bar -->
     <main>
-        <div class="fondoRotadorInterno">
-                <h2 class="tituloIndex">Pedidos</h2> 
+        <div class="rotadorInterno__Fondo">
+                <h2 class="pedidosTitulo">Pedidos</h2> 
         </div>
-        <div class="seccionesPedidos">
-            <h2 class="textoTituloCentrado">Como hacer tu pedido</h2>
-            <p class="textoDescripcion">Tortas: Envianos una imagen con la referencia del diseño de tu torta o contanos como te gustaría que sea. Decinos de cuantas porciones la necesitas. Por último elegí dos sabores de bizcochuelo (vainilla, vainilla con chips o chocolate) y dos sabores de relleno (chocolate blanco o negro, café, coco y dulce de leche o dulce de leche solo, con chips o con nueces.</p>
-            <p class="textoDescripcion">Gallettias: mandanos una referencia del diseño o contanos de que te gustaría que sea, elegí el sabor (vainilla o chocolate) y decinos la cantidad (el mínimo son 7 cookies).</p>
-            <p class="textoDescripcion">Macarrons: elegí el gusto (vainilla, café, coco y dulce de leche, menta, chocolate blanco o negro o dulce de leche), elegí el color (pueden ser hasta 2 colores) y por último la cantidad (el mínimo es 7 unidades).</p>
+        <div class="pedidosSecciones">
+            <h2 class="texto__TituloCentrado">Como hacer tu pedido</h2>
+            <p class="texto__Descripcion">Tortas: Envianos una imagen con la referencia del diseño de tu torta o contanos como te gustaría que sea. Decinos de cuantas porciones la necesitas. Por último elegí dos sabores de bizcochuelo (vainilla, vainilla con chips o chocolate) y dos sabores de relleno (chocolate blanco o negro, café, coco y dulce de leche o dulce de leche solo, con chips o con nueces.</p>
+            <p class="texto__Descripcion">Gallettias: mandanos una referencia del diseño o contanos de que te gustaría que sea, elegí el sabor (vainilla o chocolate) y decinos la cantidad (el mínimo son 7 cookies).</p>
+            <p class="texto__Descripcion">Macarrons: elegí el gusto (vainilla, café, coco y dulce de leche, menta, chocolate blanco o negro o dulce de leche), elegí el color (pueden ser hasta 2 colores) y por último la cantidad (el mínimo es 7 unidades).</p>
         </div>
         <div>
-            <h2 class="textoTituloCentrado">Ejemplos para que te inspires</h2>
+            <h2 class="texto__TituloCentrado">Ejemplos para que te inspires</h2>
         </div>
-        <div class="gridImagenesProductos">
+        <div class="gridPedidos__ImagenesProductos">
             <picture>
                 <img src="../img/Torta-Flores.png" alt="Torta con flores">
             </picture>
@@ -81,36 +81,36 @@
         </div>
     </main>
 <!-- footer -->
-<footer class="todoFooter">
-    <div class="contenedoresFooterLogo">
+<footer class="footerTodo">
+    <div>
         <a href="../index.html">
             <img class="logo" src="../img/Logo-1.png" alt="logo">
         </a> 
     </div>
-    <div class="contenedoresFooterProductos">
+    <div>
         <ul>
-            <li class="textoFooter">
+            <li class="footerTexto">
                 <a href="./productos.html" >productos</a>
             </li>
-            <li class="textoFooter">
+            <li class="footerTexto">
                 <a href="./pedidos.html" >pedidos</a></li>
-            <li class="textoFooter">
+            <li class="footerTexto">
                 <a href="./nosotros.html" >nosotros</a>
             </li>
         </ul>
     </div>
-    <div class="contenedoresFooterContacto">
-        <h4 class="textoFooter__titulo">Contacto</h4>
+    <div>
+        <h4 class="footerTexto__Titulo">Contacto</h4>
         <ul>
-            <li class="textoFooter">
+            <li class="footerTexto">
                 <a href="https://walink.co/a67b8a" >+5493415046876</a>
             </li>
-            <li class="textoFooter">
+            <li class="footerTexto">
                 <a href="mailto:clementinaracciatti@gmail.com" >ciatti@pasteleria.com.ar</a>
             </li>
         </ul>
     </div>
-    <div class="contenedoresFooterRedes">
+    <div>
         <a href="https://www.instagram.com/ciatti.pasteleria/">
             <img src="../img/icon-i.png" alt="icono instagram">
         </a> 
