--- a/pages/productos.html
+++ b/pages/productos.html
@@ -20,7 +20,7 @@
             </a>
         </div>
         <div>
-            <nav class="navbar navbar-expand-lg textoNav">
+            <nav class="navbar navbar-expand-lg navTexto">
                 <div class="container-fluid">
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -47,70 +47,70 @@
     </header>
 <!-- end navigation bar -->
     <main>
-        <div class="fondoRotadorInterno">
-                <h2 class="tituloIndex">Nuestros Productos</h2>
+        <div class="rotadorInterno__Fondo">
+                <h2 class="productosTitulo">Nuestros Productos</h2>
         </div>
         <section>
-            <div class="cardProductosInternos">
+            <div class="productosInternos__Cards">
                 <div>
-                    <img class="imgProductosInternos" src="../img/Macarons-2.jpg" alt="Macarons">
+                    <img class="productosInternos__Img" src="../img/Macarons-2.jpg" alt="Macarons">
                 </div>
                 <div>
-                    <h2 class="textoTituloProductos">Macarons</h2>
-                    <p class="textoDescripcionProductos">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore, aliquam itaque doloremque saepe modi, dolorum veniam nihil culpa dignissimos distinctio libero dolorem fugiat quae eaque reiciendis voluptatum magnam natus porro.</p>
-                </div>
-            </div>
-            <div class="cardProductosInternos">
-                <div>
-                    <h2 class="textoTituloProductos">Tortas</h2>
-                    <p class="textoDescripcionProductos">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore, aliquam itaque doloremque saepe modi, dolorum veniam nihil culpa dignissimos distinctio libero dolorem fugiat quae eaque reiciendis voluptatum magnam natus porro.</p>
-                </div>
-                <div>
-                    <img class="imgProductosInternos" src="../img/Torta-2.jpg" alt="Tortas">
+                    <h2 class="productosTexto__Titulos">Macarons</h2>
+                    <p class="productosTexto__Descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore, aliquam itaque doloremque saepe modi, dolorum veniam nihil culpa dignissimos distinctio libero dolorem fugiat quae eaque reiciendis voluptatum magnam natus porro.</p>
                 </div>
             </div>
-            <div class="cardProductosInternos">
+            <div class="productosInternos__Cards">
                 <div>
-                    <img class="imgProductosInternos" src="../img/Galletitas-2.jpg" alt="Galletitas">
+                    <h2 class="productosTexto__Titulos">Tortas</h2>
+                    <p class="productosTexto__Descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore, aliquam itaque doloremque saepe modi, dolorum veniam nihil culpa dignissimos distinctio libero dolorem fugiat quae eaque reiciendis voluptatum magnam natus porro.</p>
                 </div>
                 <div>
-                    <h2 class="textoTituloProductos">Galletitas</h2>
-                    <p class="textoDescripcionProductos">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore, aliquam itaque doloremque saepe modi, dolorum veniam nihil culpa dignissimos distinctio libero dolorem fugiat quae eaque reiciendis voluptatum magnam natus porro.</p>
+                    <img class="productosInternos__Img" src="../img/Torta-2.jpg" alt="Tortas">
+                </div>
+            </div>
+            <div class="productosInternos__Cards">
+                <div>
+                    <img class="productosInternos__Img" src="../img/Galletitas-2.jpg" alt="Galletitas">
+                </div>
+                <div>
+                    <h2 class="productosTexto__Titulos">Galletitas</h2>
+                    <p class="productosTexto__Descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore, aliquam itaque doloremque saepe modi, dolorum veniam nihil culpa dignissimos distinctio libero dolorem fugiat quae eaque reiciendis voluptatum magnam natus porro.</p>
                 </div>
             </div>
         </section>
     </main>
 <!-- footer -->
-<footer class="todoFooter">
-    <div class="contenedoresFooterLogo">
+<footer class="footerTodo">
+    <div>
         <a href="../index.html">
             <img class="logo" src="../img/Logo-1.png" alt="logo">
         </a> 
     </div>
-    <div class="contenedoresFooterProductos">
+    <div>
         <ul>
-            <li class="textoFooter">
+            <li class="footerTexto">
                 <a href="./productos.html">productos</a>
             </li>
-            <li class="textoFooter">
+            <li class="footerTexto">
                 <a href="./pedidos.html">pedidos</a></li>
-            <li class="textoFooter">
+            <li class="footerTexto">
                 <a href="./nosotros.html">nosotros</a>
             </li>
         </ul>
     </div>
-    <div class="contenedoresFooterContacto">
-        <h4 class="textoFooter__titulo">Contacto</h4>
+    <div>
+        <h4 class="footerTexto__Titulo">Contacto</h4>
         <ul>
-            <li class="textoFooter">
+            <li class="footerTexto">
                 <a href="https://walink.co/a67b8a">+5493415046876</a>
             </li>
-            <li class="textoFooter">
+            <li class="footerTexto">
                 <a href="mailto:clementinaracciatti@gmail.com">ciatti@pasteleria.com.ar</a>
             </li>
         </ul>
     </div>
-    <div class="contenedoresFooterRedes">
+    <div>
         <a href="https://www.instagram.com/ciatti.pasteleria/">
             <img src="../img/icon-i.png" alt="icono instagram">
         </a> 
