--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 </head>
 <body class="grid">
 <!-- navigation bar -->
-    <header class="flexHeader">
+    <header class="header">
         <div>
             <a href="index.html">
                 <img class="logo" src="./img/Logo-1.png" alt="logo">
             </a>
         </div>
         <div>
-            <nav class="navbar navbar-expand-lg textoNav">
+            <nav class="navbar navbar-expand-lg navTexto">
                 <div class="container-fluid">
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -52,19 +52,19 @@
               <div class="carousel-item active">
                 <img src="./img/imgrotador-1.jpg" class="d-block w-100" alt="Galletitas Unicornio">
                 <div class="carousel-caption d-block">
-                    <h5 class="tituloIndex">Galletitas</h5>
+                    <h5 class="indexTitulo">Galletitas</h5>
                 </div>
                </div>
                <div class="carousel-item">
                 <img src="./img/imgrotador-3.jpg" class="d-block w-100" alt="Macarrons">
                 <div class="carousel-caption d-block">
-                    <h5 class="tituloIndex">Macarons</h5>
+                    <h5 class="indexTitulo">Macarons</h5>
                 </div>
                </div>
                <div class="carousel-item">
                 <img src="./img/imgrotador-4.jpg" class="d-block w-100" alt="Torta Roja">
                 <div class="carousel-caption d-block">
-                    <h5 class="tituloIndex">Tortas</h5>
+                    <h5 class="indexTitulo">Tortas</h5>
                 </div>
                </div>
             </div>
@@ -79,34 +79,34 @@
           </div>
         <section class="separador">
             <div>
-                <h3 class="textoDescripcionIndex">Dejate tentar por la más rica pastelería y sus increíbles diseños</h3>
+                <h3 class="indexTexto">Dejate tentar por la más rica pastelería y sus increíbles diseños</h3>
             </div>
             <div>
-                <img class="imgSeparador" src="./img/separador.png" alt="separador">
+                <img class="separadorImg" src="./img/separador.png" alt="separador">
             </div>
         </section>
-        <section class="cardProductos">
-            <div class="cardProductos__box">
+        <section class="productosCard">
+            <div class="productosCard__box">
                 <picture>
-                    <img class="cardProductos__img" src="./img/Macarons.jpg" alt="macarons">
+                    <img class="productosCard__img" src="./img/Macarons.jpg" alt="macarons">
                 </picture>
                 <div>
                     <a class="button" href="./pages/productos.html"> Macarons
                     </a>
                 </div>
             </div>
-            <div class="cardProductos__box">
+            <div class="productosCard__box">
                 <picture>
-                    <img class="cardProductos__img" src="./img/Torta.jpg" alt="tortas">
+                    <img class="productosCard__img" src="./img/Torta.jpg" alt="tortas">
                 </picture>
                 <div>
                     <a class="button" href="./pages/productos.html"> Tortas
                     </a>
                 </div>
             </div>
-            <div class="cardProductos__box">
+            <div class="productosCard__box">
                 <picture>
-                    <img class="cardProductos__img" src="./img/Galletitas.jpg" alt="galletitas">
+                    <img class="productosCard__img" src="./img/Galletitas.jpg" alt="galletitas">
                 </picture>
                 <div>
                     <a class="button" href="./pages/productos.html">  Galletitas
@@ -116,7 +116,7 @@
         </section>
     </main>
 <!-- footer -->
-    <footer class="todoFooter">
+    <footer class="footerTodo">
         <div>
             <a href="index.html">
                 <img class="logo" src="./img/Logo-1.png" alt="logo">
@@ -124,23 +124,23 @@
         </div>
         <div>
             <ul>
-                <li class="textoFooter">
+                <li class="footerTexto">
                     <a href="./pages/productos.html" >productos</a>
                 </li>
-                <li class="textoFooter">
+                <li class="footerTexto">
                     <a href="./pages/pedidos.html" >pedidos</a></li>
-                <li class="textoFooter">
+                <li class="footerTexto">
                     <a href="./pages/nosotros.html" >nosotros</a>
                 </li>
             </ul>
         </div>
         <div>
-            <h4 class="textoFooter__titulo">Contacto</h4>
+            <h4 class="footerTexto__Titulo">Contacto</h4>
             <ul>
-                <li class="textoFooter">
+                <li class="footerTexto">
                     <a href="https://walink.co/a67b8a" >+5493415046876</a>
                 </li>
-                <li class="textoFooter">
+                <li class="footerTexto">
                     <a href="mailto:clementinaracciatti@gmail.com" >ciatti@pasteleria.com.ar</a>
                 </li>
             </ul>
