--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="./img/Favicon.png">
+    <meta name="description" content="Pastelería de diseño en la ciudad de Rosario">
+    <meta name="keywords"  content="pastelería, rosario, diseño, tortas, galletitas">
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
@@ -52,19 +54,19 @@
               <div class="carousel-item active">
                 <img src="./img/imgrotador-1.jpg" class="d-block w-100" alt="Galletitas Unicornio">
                 <div class="carousel-caption d-block">
-                    <h5 class="indexTitulo">Galletitas</h5>
+                    <h5 class="indexTitulo-large">Galletitas</h5>
                 </div>
                </div>
                <div class="carousel-item">
                 <img src="./img/imgrotador-3.jpg" class="d-block w-100" alt="Macarrons">
                 <div class="carousel-caption d-block">
-                    <h5 class="indexTitulo">Macarons</h5>
+                    <h5 class="indexTitulo-xlarge">Macarons</h5>
                 </div>
                </div>
                <div class="carousel-item">
                 <img src="./img/imgrotador-4.jpg" class="d-block w-100" alt="Torta Roja">
                 <div class="carousel-caption d-block">
-                    <h5 class="indexTitulo">Tortas</h5>
+                    <h5 class="indexTitulo-xlarge">Tortas</h5>
                 </div>
                </div>
             </div>
@@ -100,7 +102,7 @@
                     <img class="productosCard__img" src="./img/Torta.jpg" alt="tortas">
                 </picture>
                 <div>
-                    <a class="button" href="./pages/productos.html"> Tortas
+                    <a class="button-medio" href="./pages/productos.html"> Tortas
                     </a>
                 </div>
             </div>
